SubVersion: $Id$

Log of changes:	tilp (cables, calcs, files, ticonv)

- 28/09/2006, version 1.01: roms
	- as stated by Benjamin, replaced snprintf by g_snprintf which is safer

- 17/09/2006, tagged as version 1.00: roms
	
- 28/08/2006, version 0.24 (0.1.4, 0.2.7, 0.2.8, 0.0.6): roms
	- added grouping/ungrouping of TiGroup file in the clist popup menu
	- tested & validated previous item
	- revert addition of -H switch to firefox call, FC5's Firefox has no such switch
	  TiLP shouldn't been invoked through sudo anyway, if it is in Ubuntu, that's a packaging bug (kevin)
	- fixed bug with file selection (files was selected but never removed from selection)
	- removed local/full path option
	- fixed DnD to target folder
	- fixed skip/retry/cancel trap: doesn't catch ERR_ABORT
	- added skip/retry/cancel for sending of var/app
	- fixed action box: can't enter folder/varname with more than 8 chars
	- fixed command line (GUI mode): file is used twice
	- can send TiGroup from command line and fixed bug in tilp_send
	- fixed TiGroup restore
	- fixed UTF8 translation in the action box (relies on the real hand-held model)
	- reworked RAM/FLASH used/free displaying: use table container
	- for now, display a user box between the sending of dumping program and the receiving of data.
		This will give time to user to enter needed commands without triggering timeouts.
	- reverted back previous change. ticalcs2 library don't allow this (program is sent internally)
	- modified ticalcs2 library consequently. Reverted back previous change again and clean-up.
	- set all custom dialog boxes to GTK_WIN_POS_MOUSE instead of GTK_WIN_POS_NONE
	- set all modal dialog boxes to GTK_WIN_POS_MOUSE instead of GTK_WIN_POS_NONE
	- raise a information message when Linux user choose Titanium/USB.

- 26/08/2006, version 0.23 (0.1.4, 0.2.6, 0.2.7, 0.0.5): roms
	- source code is frozen: entering in testing phase
	- check return value of all tifiles_xxxx calls into TiLP