@@ -33,7 +33,7 @@
 # define TILP_VERSION VERSION
 #endif
 
-#define TILP_REQUIRES_LIBCABLES_VERSION	"1.0.0"
+#define TILP_REQUIRES_LIBCABLES_VERSION	"1.0.2"
 #define TILP_REQUIRES_LIBCALCS_VERSION 	"1.0.0"
 #define TILP_REQUIRES_LIBFILES_VERSION	"1.0.0"
 #define TILP_REQUIRES_LIBCONV_VERSION	"1.0.0"
