@@ -4,6 +4,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 
 - 28/09/2006, version 1.01: roms
 	- as stated by Benjamin, replaced snprintf by g_snprintf which is safer
+	- GIF: don't ask when built in _CONSOLE mode
 
 - 17/09/2006, tagged as version 1.00: roms
 	
